--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body style="background-color:#b6bde0;">
 
-<div id="label" style="padding-top: 40px;font-size: 48pt;">How Happy is The World?</div>  
-<div id="country_name" style="padding-top: 450px;font-size: 24pt;padding-left: 600px;">ASD</div>  
+<div id="label" style="padding-top: 0px;font-size: 48pt;">How Happy is The World?</div>  
+<div id="country_name" style="padding-top: 450px;font-size: 24pt;padding-left: 600px;">Malaysia</div>  
 <div id="globe" style="top:15%; padding-left: 100px;padding-bottom: 80px; padding-top: 100px; position: absolute;"></div>
 
 <div id="choropleth_map"></div>
-<div id="label" style="padding-top: 600px;">World Happiness Score 2016-2019</div>
+<div id="label" style="padding-top: 200px;">World Happiness Score 2016-2019</div>
 <div id="periodical_text" style="padding-top: 15px;">
   Over four years, the world have changed a lot as globalisation is growing very rapidly. 
   Some countries might become more advanced, where some still trying to find peace in the midst of war.
@@ -28,9 +28,9 @@
 <h1 id="label" style="padding-top: 820px; text-align: left;padding-left: 700px;">Happiest Countries 2016-2019</h1>
 <div id="boxplot" style="top:140%; padding-right: 100px;float: right;"></div>
 
-<h1 id="label" style="padding-top: 820px; text-align: left;padding-left: 100px;">Can Money Buy Happiness?</h1>
-<div id="scatterplot" style="top:140%; padding-right: 100px;padding-bottom: 80px; padding-top: 5px;"></div>
-
+<h1 id="label" style="padding-top: 520px; text-align: left;padding-left: 100px;">Can Money Buy Happiness?</h1>
+<div id="scatterplot" style="top:140%; padding-left: 100px;padding-bottom: 80px; padding-top: 5px;"></div>
+<div id="country_map" style="top:15%; padding-left: 100px; padding-top: 100px; position: absolute;"></div>
 <script type="text/javascript">
 
   var spec1 = "js/boxplot.json";
@@ -54,7 +54,13 @@
       console.log(item.datum.properties.name)
       var x = document.getElementById("country_name");
       x.textContent = item.datum.properties.name;
+      exportToCsv("data/selected.csv",item.datum.properties.name)
     });
+  }).catch(console.error);
+
+  var spec5 = "js/country_map.json";
+  vegaEmbed('#country_map', spec5).then(function(result) {
+    console.log(result)
   }).catch(console.error);
 
 </script>
