--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <body style="background-color:#b6bde0;">
 
 <div id="label" style="padding-top: 0px;font-size: 48pt;">How Happy is The World?</div>  
-<div id="country_name" style="padding-top: 450px;font-size: 24pt;padding-left: 500px;"></div>  
+<div id="region" style="padding-top: 80px;padding-left: 500px;">Western Europe</div>
+<div id="country_name" style="padding-top: 330px;font-size: 24pt;padding-left: 500px;"></div>  
+<div id="country_detail" style="padding-top: 10px;padding-left: 880px;"></div>  
 <div id="globe" style="top:15%; padding-left: 100px;padding-bottom: 80px; padding-top: 100px; position: absolute;"></div>
 
 <div id="choropleth_map"></div>
-<div id="label" style="padding-top: 200px;">World Happiness Score 2016-2019</div>
+<div id="label" style="padding-top: 180px;">World Happiness Score 2016-2019</div>
 <div id="periodical_text" style="padding-top: 15px;">
   Over four years, the world have changed a lot as globalisation is growing very rapidly. 
   Some countries might become more advanced, where some still trying to find peace in the midst of war.
@@ -55,9 +57,11 @@
   var spec5 = "js/Regions/Western_Europe.json";
   vegaEmbed('#country_map', spec5).then(function(result) {
     result.view.addEventListener('click', function(event, item) {
-      console.log(item.datum.properties.NAME)
+      console.log(item.datum.Happiness_Rank)
       var x = document.getElementById("country_name");
-      x.textContent = item.datum.properties.NAME;
+      x.textContent = "#Rank "+item.datum.Happiness_Rank+" :   "+item.datum.properties.NAME;
+      var y = document.getElementById("country_detail");
+      y.textContent = "Happiness Score: "+item.datum.Happiness_Score;
     });
   }).catch(console.error);
 
