--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body style="background-color:#b6bde0;">
 
-<div id="label" style="padding-top: 0px;font-size: 48pt;">How Happy is The World?</div>  
-<div id="region" style="padding-top: 80px;padding-left: 500px;">Western Europe</div>
-<div id="country_name" style="padding-top: 330px;font-size: 24pt;padding-left: 500px;">#Rank</div>  
-<div id="country_detail" style="padding-top: 10px;padding-left: 880px;">Happiness Score: </div>  
+<div id="label" style="padding-top: 5px;font-size: 48pt;">How Happy is The World?</div>  
+<svg width="1510" height="510" style="background: #0e836a2c; position:absolute; z-index:-1;top:130px"></svg>
+<div id="region" style="padding-top: 75px;padding-left: 500px;">Eastern Asia</div>
+<div id="country_name" style="padding-top: 320px;font-size: 24pt;padding-left: 500px;">Select a country</div>  
+<div id="country_detail" style="padding-top: 10px;padding-left: 880px;">>></div>  
 <div id="globe" style="top:15%; padding-left: 100px;padding-bottom: 80px; padding-top: 100px; position: absolute;"></div>
 
 <div id="choropleth_map"></div>
@@ -27,6 +28,7 @@
   These maps showed how happiness scores changed from 2016 to 2019 all over the globe.
 </div>
 
+<svg width="1510" height="610" style="background: #ba7feb2c; position:absolute; z-index:-1;top:1600px"></svg>
 <h1 id="label" style="padding-top: 820px; text-align: left;padding-left: 100px;">Happiest Countries 2016-2019</h1>
 <div id="boxplot" style="top:140%; padding-right: 100px;padding-left: 600px;"></div>
 <div id="periodical_text" style="padding-right: 1000px;padding-left: 150px;top: 245%;">
@@ -35,7 +37,7 @@
   Canada is the only country that is below average, in contrast to Iceland and Norway, where they never went below average.
 </div>
 
-<h1 id="label" style="padding-top: 20px; text-align: left;padding-left: 100px;">Can Money Buy Happiness?</h1>
+<h1 id="label" style="padding-top: 40px; text-align: left;padding-left: 100px;">Can Money Buy Happiness?</h1>
 <div id="periodical_text" style="padding-top: 30px; padding-left: 600px;">
   When it comes to happiness, people often ask the question, "Can money buy happiness"? Does that mean that, if someone is rich,
   that means that person will be happier than others? Some might agree, as money doesn't buy happiness but choices. However, looking at the statistic of
@@ -69,27 +71,55 @@
   }).catch(console.error);
 
   var spec4 = "js/globe.json";
+  var spec5 = "js/Regions/Eastern_Asia.json";
   vegaEmbed('#globe', spec4).then(function(result) {
     result.view.addEventListener('click', function(event, item) {
-      console.log(item.datum.properties.name)
+      var z = document.getElementById("region");
+        
       var name = item.datum.properties.name;
-      const lookupCSV = require('./node_modules/lookup-csv');
-      const lookupTable = lookupCSV('./data/2016.csv');
-      matchingRows = lookupTable.get(name);
-      console.log(matchingRows);
+      var western_europe =["Belgium","France","Ireland","Luxembourg","Monaco","Netherlands","United Kingdom"];
+      var australia =["Australia","New Zealand"];
+      var southern_asia =["Bangladesh","Bhutan","India","Pakistan","Nepal","Sri Lanka"];
+      var southeastern_asia =["Myanmar","Malaysia","Indonesia","Singapore","Thailand","Vietnam","Laos","Cambodia","Philippines"];
+      var latinamerica =["Mexico","Guatemala","Honduras","Peru","Nicaragua","Brazil","Venezuela","Chile","Argentina","Bolivia","Paraguay","Colombia","Ecuador","Jamaica"];
+      var me_na =["Morocco","Algeria","Libya","Egypt","Saudi Arabia","Yemen","Israel","Jordan","Iraq","Syria","Turkey","Iran"];
+      var north_america =["Canada"];
+      var sub_saharan =["Belgium","France","Ireland","Luxembourg","Monaco","Netherlads","United Kingdom"];
+      var eastern_asia =["Mongolia","China","Japan","South Korea","Taiwan"];
+      if (western_europe.includes(name)) {spec5 = "js/Regions/Western_Europe.json"; z.textContent = "Western Europe";}
+      else if (australia.includes(name)) {spec5 = "js/Regions/Australia.json"; z.textContent = "Australia and New Zealand";}
+      else if (southern_asia.includes(name)) {spec5 = "js/Regions/Southern_Asia.json"; z.textContent = "Southern Asia";}
+      else if (southeastern_asia.includes(name)) {spec5 = "js/Regions/Southeastern_Asia.json"; z.textContent = "Southeastern Asia";}
+      else if (latinamerica.includes(name)) {spec5 = "js/Regions/LatinAmericaCarribean.json"; z.textContent = "Latin America Carribean";}
+      else if (me_na.includes(name)) {spec5 = "js/Regions/MiddleEast_NorthernAfrica.json"; z.textContent = "Middle East and Northern Africa";}
+      else if (north_america.includes(name)) {spec5 = "js/Regions/North_America.json"; z.textContent = "North America";}
+      else if (sub_saharan.includes(name)) {spec5 = "js/Regions/Sub-Saharan_Africa.json"; z.textContent = "Sub-Saharan Africa";}
+      else if (eastern_asia.includes(name)) {spec5 = "js/Regions/Eastern_Asia.json"; z.textContent = "Eastern Asia";}
+      else {spec5 = "js/Regions/Eastern_Asia.json";z.textContent = "Central and Eastern Europe";}
+      console.log();
+      vegaEmbed('#country_map', spec5).then(function(result) {
+        result.view.addEventListener('click', function(event, item) {
+          console.log(item.datum)
+          var x = document.getElementById("country_name");
+          x.textContent = "#Rank "+item.datum.Happiness_Rank+" :   "+item.datum.properties.NAME;
+          var y = document.getElementById("country_detail");
+          y.textContent = "Happiness Score: "+item.datum.Happiness_Score;
+        });
+      }).catch(console.error);
     });
   }).catch(console.error);
 
-  var spec5 = "js/Regions/Western_Europe.json";
-  vegaEmbed('#country_map', spec5).then(function(result) {
-    result.view.addEventListener('click', function(event, item) {
-      console.log(item.datum.Happiness_Rank)
-      var x = document.getElementById("country_name");
-      x.textContent = "#Rank "+item.datum.Happiness_Rank+" :   "+item.datum.properties.NAME;
-      var y = document.getElementById("country_detail");
-      y.textContent = "Happiness Score: "+item.datum.Happiness_Score;
-    });
-  }).catch(console.error);
+vegaEmbed('#country_map', spec5).then(function(result) {
+      result.view.addEventListener('click', function(event, item) {
+        console.log(item.datum)
+        var x = document.getElementById("country_name");
+        x.textContent = "#Rank "+item.datum.Happiness_Rank+" :   "+item.datum.properties.NAME;
+        var y = document.getElementById("country_detail");
+        y.textContent = "Happiness Score: "+item.datum.Happiness_Score;
+      });
+    }).catch(console.error);
+
+
 
 </script>
 
