--- a/index.html
+++ b/index.html
@@ -11,49 +11,85 @@
 
 
 </head>
-<body style="background-color:#b6bde0;">
+<body id="main">
 
-<div id="label" style="padding-top: 5px;font-size: 48pt;">How Happy is The World?</div>  
-<svg width="1510" height="510" style="background: #0e836a2c; position:absolute; z-index:-1;top:130px"></svg>
-<div id="region" style="padding-top: 75px;padding-left: 500px;">Eastern Asia</div>
-<div id="country_name" style="padding-top: 320px;font-size: 24pt;padding-left: 500px;">Select a country</div>  
-<div id="country_detail" style="padding-top: 10px;padding-left: 880px;">>></div>  
-<div id="globe" style="top:15%; padding-left: 100px;padding-bottom: 80px; padding-top: 100px; position: absolute;"></div>
+<div style="background-color:#b6bde0; border-style: solid;">
 
-<div id="choropleth_map"></div>
-<div id="label" style="padding-top: 120px;">World Happiness Score 2016-2019</div>
-<div id="periodical_text" style="padding-top: 30px;">
-  Over four years, the world have changed a lot as globalisation is growing very rapidly. 
-  Some countries might become more advanced, where some still trying to find peace in the midst of war.
-  These maps showed how happiness scores changed from 2016 to 2019 all over the globe.
+  <div id="label" style="padding-top: 30px;font-size: 55pt;color: #32244f;">How Happy is The World?</div>  
+  <div id="label" style="padding-top: 10px;font-size: 24pt;color: #443269;padding-bottom: 10px;">The constrast of countries happiness are much more concerning the world think.</div>  
+  <hr style="width:1450px;height:4px;border-width:0;text-align: center;color: rgb(107, 96, 112);background-color:rgb(107, 96, 112);">
+
+
+  <div style=" display: flex;justify-content: center;text-align: center;padding-left: 100px;padding-right: 100px;">
+      <div id="globe" style="padding-right: 800px;padding-top: 90px;position: absolute;"></div>
+      <div>
+        <div id="region" style="padding-top: 40px;padding-left: 600px;color: #355070;">Eastern Asia</div>
+        <div id="country_map" style="padding-top: 10px;position: absolute;margin-right: 300px;"></div>
+        <div id="country_name" style="padding-top: 340px;font-size: 20pt;padding-left: 600px;color: #586e8b;">Select a country</div>
+        <div id="country_detail" style="padding-top: 3px;padding-left: 600px;color: #586e8b;padding-bottom: 30px;">>></div>
+      </div>
+
+  </div>
+
+  <div style="background-color: #95a3b663;justify-content: center;text-align: center;">
+    <div id="label" style="padding-top: 50px;position:relative;">World Happiness Score 2016-2019</div>
+    <div id="periodical_text" style="justify-content: center;text-align: center;padding-top: 30px;align-items:center;">
+      Over four years, the world have changed a lot as globalisation is growing very rapidly. 
+      Some countries might become more advanced, where some still
+    </div>
+    <div id="periodical_text" style="justify-content: center;text-align: center;padding-top: 2px;align-items:center;">
+      trying to find peace in the midst of war. These maps showed how happiness scores changed from 2016 to 2019 all over the globe.
+    </div>
+    <div id="periodical" style="display: flex;justify-content: center;text-align: center;padding-top:50px;padding-bottom: 10px;padding-left: 25px;"></div>
+  </div>
+
+  <div style="justify-content: center;text-align: center;">
+    <h1 id="label" style="padding-top: 20px; position:relative;padding-right: 750px;">Happiest Countries 2016-2019</h1>
+    <div>
+      <div id="periodical_text" style="padding-left: 170px;position: absolute;padding-top: 20px;width: 500px;display: unset;text-align: justify;">
+        <span>Looking at the leaderboard over 2016 to 2019,</span>
+        <span style="color: #182973; font-size:21pt;font-weight: bold;">Finland, </span>
+        <span> will be the happiest country over four years. Followed by </span>
+        <span  style="color: #374eb3; font-size: 21pt;font-weight: bold;">Norway</span>
+        <span> in Europe, and </span>
+        <span style="color: #5170fa; font-size: 21pt;font-weight: bold;"> Iceland </span>
+        <span>at the third place, slightly above Switzerland.</span>
+        
+      </div>
+      <div id="periodical_text" style="padding-left: 170px;position: absolute;padding-top: 210px;width: 500px;display: unset;text-align: justify;">
+        From 2016 to 2019, the countries that stay top 5 are Canada, Finland, Norway, Ireland, and Switzerland. In these four years,
+        we could see that Finland has the most changes, while Iceland barely changed. Refering to the average value of the five countries, 
+        Canada is the only country that is below average, in contrast to Iceland and Norway, where they never went below average.
+      </div>
+      <div id="boxplot" style="padding-left: 760px;padding-bottom: 0px;"></div>
+    </div>
+  </div>
+
+
+  <h1 id="label" style="padding-top: 0px; position:relative;padding-right: 800px;">Can Money Buy Happiness?</h1>
+  <div style=" display: flex;justify-content: center;text-align: center;">
+    <div id="scatterplot" style="padding-right: 800px;padding-top: 10px;position: absolute;padding-bottom: 80px;"></div>
+    <div style="padding-right: 100px;">
+      <div id="periodical_text" style="padding-top: 30px;width: 800px;display: unset;position: absolute;text-align: justify;">
+        When it comes to happiness, people often ask the question, "Can money buy happiness"? Does that mean that, if someone is rich,
+        that means that person will be happier than others? Some might agree, as money doesn't buy happiness but choices. However, looking at the statistic of
+        GDP per capita of all countries compared to their happiness scores, it says otherwise. Turns out, money do buy happiness, as the relationship is linear.
+      </div>
+      <div id="periodical_text" style="font-weight: bold;font-size: 90pt;color: #305ba1;padding-top: 170px;padding-left:700px;position: absolute;z-index: 3;">
+        ❝
+      </div>
+      <div id="periodical_text" style="padding-top: 240px;padding-left: 50px;font-weight: bold;font-size: 22pt;color: #305ba1;width: 750px;display: unset;position: absolute;">
+        People say money can't buy happiness, but it can make awfully comfortable while you're being miserable.
+      </div>
+      <div id="periodical_text" style="padding-top: 370px; padding-left: 1108px;font-weight: bold;font-size: 22pt;color: #1a3e75; padding-bottom: 140px;">
+        - Clare Boothe Luce -
+      </div>
+    </div>
+  </div>
+
 </div>
 
-<svg width="1510" height="610" style="background: #ba7feb2c; position:absolute; z-index:-1;top:1600px"></svg>
-<h1 id="label" style="padding-top: 820px; text-align: left;padding-left: 100px;">Happiest Countries 2016-2019</h1>
-<div id="boxplot" style="top:140%; padding-right: 100px;padding-left: 600px;"></div>
-<div id="periodical_text" style="padding-right: 1000px;padding-left: 150px;top: 245%;">
-  From 2016 to 2019, the countries that stay top 5 are Canada, Finland, Norway, Ireland, and Switzerland. In these four years,
-  we could see that Finland has the most changes, while Iceland barely changed. Refering to the average value of the five countries, 
-  Canada is the only country that is below average, in contrast to Iceland and Norway, where they never went below average.
-</div>
 
-<h1 id="label" style="padding-top: 40px; text-align: left;padding-left: 100px;">Can Money Buy Happiness?</h1>
-<div id="periodical_text" style="padding-top: 30px; padding-left: 600px;">
-  When it comes to happiness, people often ask the question, "Can money buy happiness"? Does that mean that, if someone is rich,
-  that means that person will be happier than others? Some might agree, as money doesn't buy happiness but choices. However, looking at the statistic of
-  Economy per GDA of all countries compared to their happiness scores, it says otherwise. Turns out, money do buy happiness, as the relationship is linear.
-</div>
-<div id="periodical_text" style="padding-top: 170px; padding-left: 620px;font-weight: bold;font-size: 90pt;color: #305ba1;">
-  ❝
-</div>
-<div id="periodical_text" style="padding-top: 250px; padding-left: 700px;font-weight: bold;font-size: 22pt;color: #305ba1;">
-  People say money can't buy happiness, but it can make awfully comfortable while you're being miserable.
-</div>
-<div id="periodical_text" style="padding-top: 380px; padding-left: 1050px;font-weight: bold;font-size: 22pt;color: #1a3e75">
-  - Clare Boothe Luce -
-</div>
-<div id="scatterplot" style="top:140%; padding-left: 100px;padding-bottom: 80px; padding-top: 5px;"></div>
-<div id="country_map" style="top:15%; padding-left: 100px; padding-top: 100px; position: absolute;"></div>
 <script type="text/javascript">
   var spec1 = "js/boxplot.json";
   vegaEmbed('#boxplot', spec1).then(function(result) {
@@ -61,7 +97,7 @@
   }).catch(console.error);
 
   var spec2 = "js/periodical.json";
-  vegaEmbed('#choropleth_map', spec2).then(function(result) {
+  vegaEmbed('#periodical', spec2).then(function(result) {
     console.log(result)
   }).catch(console.error);
 
