--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div style="background-color:#b6bde0; border-style: solid;">
 
   <div id="label" style="padding-top: 30px;font-size: 55pt;color: #32244f;">How Happy is The World?</div>  
-  <div id="label" style="padding-top: 10px;font-size: 24pt;color: #443269;padding-bottom: 10px;">The constrast of countries happiness are much more concerning the world think.</div>  
+  <div id="label" style="padding-top: 10px;font-size: 24pt;color: #443269;padding-bottom: 10px;">The constrast of countries happiness are much more concerning than the world think.</div>  
   <hr style="width:1450px;height:4px;border-width:0;text-align: center;color: rgb(107, 96, 112);background-color:rgb(107, 96, 112);">
 
 
@@ -35,7 +35,7 @@
     <div id="label" style="padding-top: 50px;position:relative;">World Happiness Score 2016-2019</div>
     <div id="periodical_text" style="justify-content: center;text-align: center;padding-top: 30px;align-items:center;">
       Over four years, the world have changed a lot as globalisation is growing very rapidly. 
-      Some countries might become more advanced, where some still
+      Some countries might become more advanced, but some are still
     </div>
     <div id="periodical_text" style="justify-content: center;text-align: center;padding-top: 2px;align-items:center;">
       trying to find peace in the midst of war. These maps showed how happiness scores changed from 2016 to 2019 all over the globe.
@@ -47,7 +47,7 @@
     <h1 id="label" style="padding-top: 20px; position:relative;padding-right: 750px;">Happiest Countries 2016-2019</h1>
     <div>
       <div id="periodical_text" style="padding-left: 170px;position: absolute;padding-top: 20px;width: 500px;display: unset;text-align: justify;">
-        <span>Looking at the leaderboard over 2016 to 2019,</span>
+        <span>Looking at the leaderboard from 2016 to 2019,</span>
         <span style="color: #182973; font-size:21pt;font-weight: bold;">Finland, </span>
         <span> will be the happiest country over four years. Followed by </span>
         <span  style="color: #374eb3; font-size: 21pt;font-weight: bold;">Norway</span>
@@ -72,7 +72,7 @@
     <div style="padding-right: 100px;">
       <div id="periodical_text" style="padding-top: 30px;width: 800px;display: unset;position: absolute;text-align: justify;">
         When it comes to happiness, people often ask the question, "Can money buy happiness"? Does that mean that, if someone is rich,
-        that means that person will be happier than others? Some might agree, as money doesn't buy happiness but choices. However, looking at the statistic of
+        the person will be happier than others? Some might agree, as money doesn't buy happiness but choices. However, looking at the statistic of
         GDP per capita of all countries compared to their happiness scores, it says otherwise. Turns out, money do buy happiness, as the relationship is linear.
       </div>
       <div id="periodical_text" style="font-weight: bold;font-size: 90pt;color: #305ba1;padding-top: 170px;padding-left:700px;position: absolute;z-index: 3;">
